dev/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
      - image: nginx
        name: dev
        ports:
        - containerPort: 80
