dev/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-service
spec:
  ports:
  - port: 9000
    targetPort: 80
  selector:
    app: dev
