dev/ui-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  #ingressClassName: "traefik"
  rules:
  - host: "dev.guideops.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dev-service
            port:
              number: 9000
  tls:
  - hosts: 
    - "dev.guideops.dev"
    secretName: letsencrypt-prod
